update avatar backend
