# backend/routes/userRoutes.ts
@@ -12,5 +12,6 @@ router.post('/subscribe/:id', jwtAuthentication, UserController.subscribe);
 router.delete('/unsubscribe/:id', jwtAuthentication, UserController.unsubscribe);
 router.get('/profile-preview/:id', optionalJwtAuthentication, UserController.profilePreview);
 router.get('/profile-stats/:id', UserController.profileStats);
+router.put('/update-avatar', jwtAuthentication, UserController.updateAvatar);
 
 export default router;
